--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -1,5 +1,4 @@
 ---
-// import { Icon } from "astro-icon/components";
 const h3 = ["mb-4 font-semibold relative w-max uppercase"];
 ---
 
@@ -211,7 +210,7 @@ const h3 = ["mb-4 font-semibold relative w-max uppercase"];
             <li>
               <a
                 class="flex items-center justify-center gap-1.5 ltr:sm:justify-start rtl:sm:justify-end"
-                href="/"
+                href="tel:941801827"
               >
                 <svg
                   xmlns="http://www.w3.org/2000/svg"
@@ -228,7 +227,7 @@ const h3 = ["mb-4 font-semibold relative w-max uppercase"];
                   ></path>
                 </svg>
 
-                <span class="flex-1 text-gray-500">972252744</span>
+                <span class="flex-1 text-gray-500">941801827</span>
               </a>
             </li>
 
