--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,6 +4,7 @@ import { BaseLayout } from '../layouts';
 import { services } from '../data-list/services.js';
 import Testimonials from '../components/home/Testimonials.astro';
 import BookYourAppointment from '../components/home/BookYourAppointment.astro';
+import FloatingCall from '../components/ui/FloatingCall.astro';
 ---
 
 <BaseLayout title="Servitec linea blanca">
@@ -35,5 +36,6 @@ import BookYourAppointment from '../components/home/BookYourAppointment.astro';
 		</section>
 		<BookYourAppointment />
 		<Testimonials />
+		<FloatingCall/>
 	</main>
 </BaseLayout>
