--- a/src/components/ui/Button.astro
+++ b/src/components/ui/Button.astro
@@ -13,7 +13,7 @@ const { link, increaseStyle, bgColor = "bg-[#0aabd7]" } = Astro.props;
 <a
   href={link}
   type="button"
-  class={`flex items-center w-max uppercase text-white ${bgColor} hover:bg-primary-color-300 focus:ring-4 focus:bg-[#0aabd7] font-medium rounded-lg text-xs px-5 py-2.5 focus:outline-none ${increaseStyle}`}
+  class={`flex items-center w-max uppercase text-white ${bgColor} hover:bg-primary-color-300 hover:cursor-pointer focus:ring-4 focus:bg-[#0aabd7] font-medium rounded-lg text-xs px-5 py-2.5 focus:outline-none ${increaseStyle}`}
 >
   <slot />
   <slot name="icon" />
