--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -19,7 +19,7 @@ const { title } = Astro.props;
 		keywords=""
 	/>
 	<body>
-		<div class="mx-auto w-full max-w-full overflow-hidden">
+		<div class="mx-auto w-full max-w-full overflow-hidden relative">
 			<Header />
 			<main>
 				<slot />
