modify image paths

--- a/src/components/home/BookYourAppointment.astro
+++ b/src/components/home/BookYourAppointment.astro
@@ -80,12 +80,12 @@ import { Title } from "..";
     </form>
   </div>
   <img
-    src="../../../public/images/waves-bottom.svg"
+    src="/images/waves-bottom.svg"
     alt=""
     class="image-cita"
   />
   <img
-    src="../../../public/images/waves-top.svg"
+    src="/images/waves-top.svg"
     alt=""
     class="image-cita-top"
   />
