--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -278,7 +278,7 @@ const h3 = ["mb-4 font-semibold relative w-max uppercase"];
     </div>
   </div>
   <img
-    src="../../../public/images/waves-bottom.svg"
+    src="/images/waves-bottom.svg"
     alt=""
     class="image-footer absolute top-0 left-0"
   />
