--- a/src/layouts/Footer.astro
+++ b/src/layouts/Footer.astro
@@ -254,7 +254,7 @@ const h3 = ["mb-4 font-semibold relative w-max uppercase"];
               </svg>
 
               <address class="-mt-0.5 flex-1 not-italic text-gray-500">
-                Calle Nestor Bermudez N° 113, Chorrillos - Lima
+                Vargas 179 Piso 1, Chorrillos - Lima
               </address>
             </li>
           </ul>
